<resources>
    <string name="app_name">Изучаем Родной язык</string>
    <string name="tab_1"><i>Изучение</i></string>
    <string name="tab_2"><i>Проверка знаний</i></string>

    <!--Экран "Настройки"-->
    <string name="switch_checked"><i>Автоматическое</i> обновление слов в разделе «теория»</string>
    <string name="switch_unchecked"><i>Ручное</i> обновление слов\n в разделе «теория»</string>
    <string name="update_freq">Частота обновления слов\n(в миллисекундах)</string>
    <string name="please_set_value">Пожалуйста, введите значение</string>
    <string name="lim_of_time">Значение должно лежать в пределах от %1$d мс до %2$d мс</string>
    <string name="questions_count">Количество вопросов в разделе «тест»</string>
    <string name="lim_of_questions">Количество вопросов должно быть от %1$d до %2$d</string>
    <string name="button_background_text">Включить задний фон кнопок в разделе «Тест»</string>
    <string name="theme_label">Тёмная тема: %s</string>
    <string name="button_language_text">🌎 Язык</string>
    <string name="settings_saved">Настройки успешно сохранены!</string>

    <!--Темы-->
    <string name="dark_theme">Включена</string>
    <string name="light_theme">Выключена</string>
    <string name="system_theme">Как на устройстве</string>
    <string name="auto_theme">Автоматически</string>
    <string name="start_time">Время рассвета</string>
    <string name="end_time">Время заката</string>

    <!--Экран "О приложении"-->
    <string name="version">Версия 6.1.0 от 14 апреля 2022</string>
    <string name="feedback"><b><i>Обратная связь</i></b></string>
    <string name="vk">Вконтакте</string>
    <string name="telegram">Телеграм</string>
    <string name="mail">Почта</string>

    <!--Кнопки и надписи на экране упражнения-->
    <string name="btn_start">Старт</string>
    <string name="btn_continue">Продолжить</string>

    <string name="assent_test_text">Выберите слово, в котором верно поставлено ударение:</string>
    <string name="suffix_test_text">Выберите верно написанное слово:</string>
    <string name="paronym_test_text">Вставьте пропущенное слово:</string>

    <string name="score">Вопрос №%1$d/%2$d\nВаш текущий результат: %3$d/%4$d</string>
    <string name="time_is_over">Время закончилось!</string>
    <string name="end_game">Поздравляем, вы набрали %1$d %2$s из %3$d</string>
    <string name="great_results">"\nЭто лучший результат за сегодня! Вы - умничка!"</string>
    <string name="one_point">очко</string>
    <string name="ten_points">очков</string>
    <string name="two_points">очка</string>

    <!--Лейблы-->
    <string name="main_label">Главное меню</string>
    <string name="assent_label">Изучение произношения</string>
    <string name="suffix_label">Изучение суффиксов</string>
    <string name="settings_title">Настройки</string>
    <string name="paronym_label">Изучение паронимов</string>
    <string name="steady_expression_label">Изучение фразеологизмов</string>
    <string name="language_label">Язык</string>
    <string name="about_title"><b>О приложении</b></string>
    <string name="menu_item_get_back">Назад</string>
    <string name="library_label">Библиотека Знаний</string>
    <string name="not_completed_section">Этот раздел ещё не завершен ¯\\_(ツ)_/¯</string>
    <string name="search_label">Поиск</string>
    <string name="switchThemeText">Тёмная тема: %s</string>
    <string name="pause">pause</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_ok">ОК</string>
    <string name="changing_theme_time">Время перемен</string>


    <string-array name="themes">
        <item>@string/light_theme</item>
        <item>@string/dark_theme</item>
        <item>@string/system_theme</item>
        <item>@string/auto_theme</item>
    </string-array>
</resources>