<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainActivity"
            android:title="@string/main_label"
            android:icon="@drawable/ic_menu_item_home"/>
        <item
            android:id="@+id/assent"
            android:title="@string/assent_label"
            android:icon="@drawable/ic_menu_item_home"/>
        <item
            android:id="@+id/suffix"
            android:title="@string/suffix_label"
            android:icon="@drawable/ic_menu_item_home"/>
        <item
            android:id="@+id/paronym"
            android:title="@string/paronym_label"
            android:icon="@drawable/ic_menu_item_home"/>

        <item
            android:id="@+id/steady_expression"
            android:title="@string/steady_expression_label"
            android:icon="@drawable/ic_menu_item_home"/>
    </group>
    <!--TODO поменять иконки-->

</menu>