<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/llMain"
    tools:context=".ui.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/auto_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/georgia"
            android:checked="true"
            android:layout_margin="@dimen/layout_margin"
            android:gravity="center"
            android:text="@string/switch_checked"
            android:textSize="@dimen/text_size"
            android:theme="@style/SwitchTheme" />

        <include
            layout="@layout/divider_view"/>

        <TextView
            android:id="@+id/pause_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginBottom="4dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/update_freq"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/edit_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="postalCode"
            android:ems="5"
            android:hint="@string/update_freq"
            android:gravity="center"
            android:inputType="number"
            android:textSize="@dimen/text_size"/>

        <SeekBar
            android:id="@+id/seek_pause"
            style="@style/Widget.AppCompat.SeekBar.Style"/>

        <include
            android:id="@+id/pause_questions_divider"
            layout="@layout/divider_view"/>

        <TextView
            android:id="@+id/questions_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:gravity="center"
            android:text="@string/questions_count"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/edit_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints=""
            android:hint="@string/questions_count"
            android:ems="5"
            android:gravity="center"
            android:inputType="number"
            android:textSize="@dimen/text_size" />

        <SeekBar
            android:id="@+id/seek_questions"
            style="@style/Widget.AppCompat.SeekBar.Style"/>

        <include
            layout="@layout/divider_view"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/showing_button_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:visibility="visible"
            android:layout_margin="@dimen/layout_margin"
            android:gravity="center"
            android:text="@string/button_background_text"
            android:textSize="@dimen/text_size"
            android:theme="@style/SwitchTheme" />

        <include
            layout="@layout/divider_view"/>

        <TextView
            android:id="@+id/switch_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:minHeight="48dp"
            android:gravity="center"
            android:text="@string/theme_label"
            android:textSize="@dimen/text_size"/>

        <Button
            android:id="@+id/button_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:visibility="gone"
            android:fontFamily="@font/xarrovv"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="23sp"/>
    </LinearLayout>
</ScrollView>